--- a/jitsi_meet/android/build.gradle
+++ b/jitsi_meet/android/build.gradle
@@ -16,9 +16,7 @@ buildscript {
 
 rootProject.allprojects {
     repositories {
-        maven {
-            url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases"
-        }
+        maven { url "file:/tmp/repo" }
         google()
         jcenter()
     }
@@ -50,5 +48,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // Jitsi Meet from https://github.com/jitsi/jitsi-maven-repository/tree/master/releases/org/jitsi/react/jitsi-meet-sdk
-    implementation ('org.jitsi.react:jitsi-meet-sdk:3.3.0') { transitive = true }
+    implementation ('org.jitsi.react:jitsi-meet-sdk:+') { transitive = true }
 }
